--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
+/* body{
+    background: #8360c3;  
+    background: -webkit-linear-gradient(to right, #2ebf91, #8360c3); 
+    background: linear-gradient(to right, #2ebf91, #8360c3); 
+} */
+
+
 .header-color{
     background: #8360c3;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2ebf91, #8360c3);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2ebf91, #8360c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+
+/*
+    Landing Page Styling
+*/
 .landing-grid{
     background: #8360c3;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2ebf91, #8360c3);  /* Chrome 10-25, Safari 5.1-6 */
@@ -64,3 +75,49 @@
 .projects-grid {
     display: flex;
 }
+
+/* 
+    Contact Page Styling
+*/ 
+
+.contact-body {
+    margin: auto;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding-top: 2em
+}
+
+.contact-grid {
+    text-align: center;
+    justify-content: center;
+    width: 80%;
+    height: 550px;
+    color: black;
+    margin-bottom: 20px;
+}
+
+.contact-grid h2{
+    font-family: 'Anton', sans-serif;
+}
+
+.contact-grid p {
+    width: 75%;
+    margin: auto;
+    padding-top: 1em;
+    font-family: 'Oxygen', sans-serif;
+    font-weight: bold;
+}
+
+.contact-grid hr{
+    border-top: 5px dotted black;
+    width: 50%;
+    margin: auto;
+}
+
+.contact-list i{
+    font-size: 45px;
+    padding-right: 5rem;
+}
+
